[release] gestion des bonus tracks

--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1,14 +1,14 @@
 
 /* debug */
 
-/*.container_12 
+/*.container_12
 {
 width:960px;
 margin-left: auto;
 margin-right: auto;
 }
 */
-/* HTML & BODY 
+/* HTML & BODY
 ***************************************************************/
 
 .header_nav_3_content_logo img
@@ -22,33 +22,33 @@ padding:0px;
 font-family: "Arial", Helvetica, sans-serif;
 }
 
-html 
+html
 {
 font-size:62.5%;
 }
 
-/* TYPO 
+/* TYPO
 ***************************************************************/
 
-@font-face 
+@font-face
 {
 font-family: 'Blanch Caps';
 src: url('../typo/blanch_caps.ttf');
 }
 
-@font-face 
+@font-face
 {
 font-family: 'Jockey One';
 src: url('../typo/JockeyOne-Regular.ttf');
 }
 
-@font-face 
+@font-face
 {
 font-family: 'Tempesta';
 src: url('../typo/pf_tempesta_seven.ttf');
 }
 
-/* TEMPLATE CONTENT 
+/* TEMPLATE CONTENT
 ***************************************************************/
 
 
@@ -64,13 +64,13 @@ src: url('../typo/pf_tempesta_seven.ttf');
 .infos_content,
 .footer_content,
 .release_content,
-.open_release, 
-.open_artists_content { 
+.open_release,
+.open_artists_content {
 width:960px;
 margin-left: auto;
 margin-right: auto;
 
-} 
+}
 
 
 .triangle img {position: absolute;top:-4.2px!important;}
@@ -96,7 +96,7 @@ background-color:#000;
 color:#FFF;
 }
 
-/* CALQUES 
+/* CALQUES
 ***************************************************************/
 
 .header_calque
@@ -141,7 +141,7 @@ background-image:url("../pics/releases/img-release.png");
 background-image:url("../pics/releases/img-release-hover.png");
 }
 
-.calque_artists 
+.calque_artists
 {
 position:absolute;
 height:233px;
@@ -156,10 +156,10 @@ background-image:url("../pics/artists/img-artist-hover.png");
 }
 
 
-/* HEADER 
+/* HEADER
 ***************************************************************/
 
-.header 
+.header
 {
 background-position: center center;
 background-repeat: repeat;
@@ -172,7 +172,7 @@ height:680px;
 /** NAV-1
 *****************************/
 
-.header_title_dhr a 
+.header_title_dhr a
 {
 color:#FFF;
 text-decoration:none;
@@ -196,7 +196,7 @@ margin-left:30px;
 margin-
 }
 
-.header_nav_2_icon li 
+.header_nav_2_icon li
 {
 display:inline;
 opacity:0.7;
@@ -204,17 +204,17 @@ opacity:0.7;
 margin:0px;
 }
 
-.header_nav_2_icon li:hover 
+.header_nav_2_icon li:hover
 {
 opacity:1;
 }
 
-.header_nav_2_button_lang 
+.header_nav_2_button_lang
 {
 background-color:#000;
 }
 
-.header_nav_2_button_lang_active a 
+.header_nav_2_button_lang_active a
 {
 color:#FFF;
 text-decoration:none;
@@ -226,7 +226,7 @@ background-color:#000;
 
 }
 
-.header_nav_2_button_lang a 
+.header_nav_2_button_lang a
 {
 background-color:#000;
 color: #29ABE2;
@@ -241,7 +241,7 @@ font-size:0.9rem;
 /** NAV-3
 *****************************/
 
-.header_nav_3 
+.header_nav_3
 {
 width:100%!important;
 background-color:#000;
@@ -255,7 +255,7 @@ position:absolute;
 
 
 
-.header_nav_3 ul 
+.header_nav_3 ul
 {
 background-color:#000;
 padding-top:3px;
@@ -285,7 +285,7 @@ font-family: 'Jockey One', sans-serif;
 
 
 
-.header_nav_3 a 
+.header_nav_3 a
 {
 color:#29ABE2;
 text-decoration:none;
@@ -294,7 +294,7 @@ font-size:28px;
 font-size:2.8rem;
 }
 
-.header_nav_3 a:hover 
+.header_nav_3 a:hover
 {
 color:#FFF;
 }
@@ -312,24 +312,24 @@ opacity:0.9;
 *****************************/
 
 
-.header_news_1_content,.header_news_2_content 
+.header_news_1_content,.header_news_2_content
 {
 font-family: 'Jockey One', sans-serif;
 text-align:right;
 margin-top:112px;}
 
-.header_news_1_content a,.header_news_2_content a  
+.header_news_1_content a,.header_news_2_content a
 {
  text-decoration:none;
 }
 
-.header_news_1_content h1 
+.header_news_1_content h1
 {
 margin-bottom:-20px;
 }
 
 
-.header_news_1_content h1 a 
+.header_news_1_content h1 a
 {
 color:#000;
 font-weight:lighter;
@@ -337,7 +337,7 @@ font-size:60px;
 font-size:6rem;
 opacity:0.9;}
 
-.header_news_1_content h2 a 
+.header_news_1_content h2 a
 {
 color:#FFF;
 font-weight:lighter;
@@ -352,11 +352,11 @@ background-color:#000;
 opacity:0.95;
 padding:5px 0px 0px 0px;
 margin-bottom:0px;
-border-right:1px solid #28abe3; 
+border-right:1px solid #28abe3;
 height:116px;
-margin-top:100px;}  
+margin-top:100px;}
 
-.header_news_2 a 
+.header_news_2 a
 {
   color:#29ABE2;
   font-style:;
@@ -401,28 +401,28 @@ margin-top:10px;
 
 .header_news_2_closed_button:hover
 {
-   background-color: rgb(41, 171, 226); 
+   background-color: rgb(41, 171, 226);
 }
 .header_news_2_closed_button img
 {
 float:left;
 }
-.header_news_2_nav img 
+.header_news_2_nav img
 {  opacity:0.5;}
-.header_news_2_nav img:hover 
+.header_news_2_nav img:hover
 {
 opacity:1;
 }
 
-.header_news_2_nav a 
+.header_news_2_nav a
 {
 padding:0px 2px 0px 2px;
 font-family: 'Tempesta', sans-serif;
 
 }
 
-.header_news_2_title 
-{    
+.header_news_2_title
+{
 font-family: 'Jockey One', sans-serif;
 color:#FFF;
 font-weight:lighter;
@@ -445,7 +445,7 @@ padding-bottom:0px;
 top:-4px;
 }
 
-.header_news_2_pictures img 
+.header_news_2_pictures img
 {
 margin:10px;
 }
@@ -458,7 +458,7 @@ padding:0px 10px 0px 10px;
 font-size:12px;
 font-size:1.2rem;
 text-align:left;
-font-family: arial, verdana, sans-serif; 
+font-family: arial, verdana, sans-serif;
 line-height:15px;
 
 }
@@ -491,7 +491,7 @@ top:-2px;
 }
 
 
-.releases_discography_number_default 
+.releases_discography_number_default
 {
 background-image:url(../pics/releases/img-release-default.png);
 height:282px;
@@ -507,7 +507,7 @@ width:220px!important;
 }
 
 
-.releases_discography_number p 
+.releases_discography_number p
 {
 margin:0px;padding:0px;
 }
@@ -517,13 +517,13 @@ margin:0px;padding:0px;
 margin-left:10px!important;
 margin-right:10px;
 }
-.releases_discography_number h1 
+.releases_discography_number h1
 {
 padding:0px;
 margin:0px 0px -6px -4px;
 }
 
-.releases_discography_last_release 
+.releases_discography_last_release
 {
 background-repeat:no-repeat;
 height:16px;
@@ -541,23 +541,23 @@ padding-left:8px;
 
 }
 
-.releases_discography_last_release a 
+.releases_discography_last_release a
 {
 margin-top:px;
 }
 
 
-.open_artists_listing_releases h1, 
+.open_artists_listing_releases h1,
 .releases_discography_number h1
-{ 
+{
 padding:0px 0px 0px 10px;
 font-size:14px;
 font-size:1.4rem;
 }
 
-.releases_discography_number h2,.open_artists_listing_releases h2 
+.releases_discography_number h2,.open_artists_listing_releases h2
 {
-padding:0px 0px 0px 10px;  
+padding:0px 0px 0px 10px;
 font-size:14px;
 font-size:1.4rem;
 margin-left:-4px;
@@ -588,7 +588,7 @@ background-color: #FFF!important;
 
 
 
-ul.releases_discography_button 
+ul.releases_discography_button
 {
 margin-top:-20px;
 margin-left:4px;
@@ -616,7 +616,7 @@ text-transform:uppercase;
 padding:5px;
 }
 
-.releases_discography_button li a:hover 
+.releases_discography_button li a:hover
 {
 color:#000;
 background-color:#29ABE2;
@@ -631,7 +631,7 @@ background-color:#000;
 background-image:url(../pics/pattern/pat-bg.png);
 background-repeat:repeat;
 top:-14px;
-}  
+}
 
 .artists h1
 {
@@ -669,12 +669,12 @@ width:220px;
 
 .artists_title a
 {
-color:#29ABE2; 
+color:#29ABE2;
 text-transform:uppercase;
-text-decoration:none; 
+text-decoration:none;
 }
 
-.artists_title 
+.artists_title
 {
 position: absolute;
 font-weight:lighter;
@@ -683,7 +683,7 @@ top:113px;
 font-size:19px;
 font-size:1.9rem;
 background-color:#000;
-padding:3px 9px 3px 3px;  
+padding:3px 9px 3px 3px;
 display: block;
 z-index:2000;
 left:10px
@@ -694,14 +694,14 @@ left:10px
 .tags h1{
 line-height:24px;
 position:relative;
-} 
+}
 
 .tags h1{
 background-color:#FFF;
 color:#000;
 text-decoration:none;
 
-} 
+}
 .tags h1:after{
 content:"";
 float:left;
@@ -712,15 +712,15 @@ height:0;
 border-color: transparent transparent  transparent #FFF ;
 margin-left:5px;
 border-style:solid;
-border-width: 40px 40px 0px 40px ;    
-} 
+border-width: 40px 40px 0px 40px ;
+}
 
 
 /* TO CLEAN
 ***************************************************************/
 
 
-.artists_show_default 
+.artists_show_default
 {
 background-image:url(../pics/artists/img-artist-default.png);
 height:240px;
@@ -755,14 +755,14 @@ font-weight:normal;
 text-transform:uppercase;
 }
 
-.infos_descr 
+.infos_descr
 {
 
 color:#b2b2b2;
 text-align:left;
 }
 
-.infos_descr li 
+.infos_descr li
 {
 list-style-type:none;
 margin-left:0px;
@@ -774,7 +774,7 @@ color:#29ABE2;
 text-decoration:none;
 opacity:0.7;
 }
-.infos_descr a:hover 
+.infos_descr a:hover
 {opacity:1;color:#29ABE2;}
 .infos_vids
 {
@@ -787,23 +787,23 @@ width:276px;
 /* BUTTON TOP - ANCRE
 ***************************************************************/
 
-.artist_button_top 
+.artist_button_top
 {
 background-image:url(../pics/pattern/pat-bg.png);
 background-repeat:repeat;
-background-color:#F2F2F2; 
+background-color:#F2F2F2;
 position:relative;
 float:right;
-padding:2px 3px 2px 2px ; 
+padding:2px 3px 2px 2px ;
 margin-top:20px;
 }
 
-.infos_button_top 
+.infos_button_top
 {
 
 background-image:url(../pics/pattern/pat-bg.png);
 background-repeat:repeat;
-background-color:#000; 
+background-color:#000;
 position:relative;
 float:right;
 padding:2px 3px 2px 2px ;
@@ -841,14 +841,14 @@ top:-28px;
 
 .footer_content p  {color:#FFF;}
 
-.footer_content h1, .footer_content h2 
+.footer_content h1, .footer_content h2
 {
 font-weight:normal;
 text-transform:uppercase;
 font-family: 'Jockey One', sans-serif;
-} 
+}
 
-.footer_content h1 
+.footer_content h1
 {
 color:#FFF;
 background-image:url(../pics/pattern/pat-bg.png);
@@ -867,20 +867,20 @@ font-size:15px;
 font-size:1.5rem;
 opacity:0.7;
 margin:10px 0px 10px 0px;
-} 
+}
 
-.footer_links_1 ul, li, .footer_links_2 ul, li 
+.footer_links_1 ul, li, .footer_links_2 ul, li
 {
 list-style-type:none;
 }
 
-.footer_links_1 li, .footer_links_2 li 
+.footer_links_1 li, .footer_links_2 li
 {
 margin:5px 0px 5px -10px;
 padding-left:10px;
 
 }
-.footer_links_1 li a, .footer_links_2 li a 
+.footer_links_1 li a, .footer_links_2 li a
 {
 color:#29ABE2;
 padding:2px 2px 0px 2px;
@@ -890,19 +890,19 @@ opacity:0.7;
 
 .footer_links_1 li a:hover, .footer_links_2 li a:hover
 {color:#29ABE2;opacity:1;}
-.footer p 
+.footer p
 {
 color:#b2b2b2;
 }
 
-.footer_content p a 
+.footer_content p a
 {
 color:#29ABE2;
 text-decoration:none;
 opacity:0.7;
 }
 
-.footer_content p a:hover 
+.footer_content p a:hover
 {
 opacity:1;
 }
@@ -910,7 +910,7 @@ opacity:1;
 {
 margin-top:30px;
 }
-.footer_nav_1 li 
+.footer_nav_1 li
 {
 display:inline;
 padding:0px;
@@ -920,7 +920,7 @@ margin:0px;
 
 .footer_nav_1 li:hover {opacity:1;}
 
-ul.footer_nav_1 
+ul.footer_nav_1
 {
 margin:8px 0px 20px 20px;
 opacity:0.6;
@@ -930,12 +930,12 @@ margin-right:-60px;
 }
 
 
-.footer_content textarea  
+.footer_content textarea
 {
 margin-top:-10px;
 width:460px;}
 
-.footer_content input,.footer_content textarea  
+.footer_content input,.footer_content textarea
 {
 border:0px;
 
@@ -943,7 +943,7 @@ border:0px;
   background-color: rgba(41, 171, 226, 0.3); }
 
 
-.footer_content input.valid 
+.footer_content input.valid
 {
 background-color:#000;
    text-transform:uppercase;
@@ -1015,11 +1015,11 @@ margin-left:-21px;
 margin-left:10px;
 }
 
-.open_releases_infos_date 
+.open_releases_infos_date
 {
 
 }
-.open_releases_content,.open_artists_content 
+.open_releases_content,.open_artists_content
 {
 padding-top:20px;
 }
@@ -1058,7 +1058,7 @@ font-size:1.3rem;
 
 }
 
-.open_releases_download_licence a 
+.open_releases_download_licence a
 {
   color:#000;
   text-decoration:none;
@@ -1072,7 +1072,7 @@ margin-bottom: 30px;
 
 h2.open_releases_title a {color: #ea1D78;text-decoration: none;}
 
-h3.open_releases_title 
+h3.open_releases_title
 {
 margin-top:20px;
 }
@@ -1104,7 +1104,7 @@ text-decoration:none;
 text-decoration:none;
 }
 
-h2.open_releases_artist a:hover 
+h2.open_releases_artist a:hover
 {
 color:#29ABE2;
 }
@@ -1118,6 +1118,10 @@ font-size:3.3rem;
 margin-top:-36px;
 }
 
+.open_releases_playlist li.bonus a
+{
+  font-style: italic;
+}
 
 .open_releases_playlist li a
 {
@@ -1142,14 +1146,14 @@ background-color:#1A1A1A!important;}
 
 
 
-span .open_releases_playlist_icon_play 
+span .open_releases_playlist_icon_play
 {
 margin-right:5px;
 color:#535353!important;
 }
 
 
-span .open_releases_playlist_icon_play:hover 
+span .open_releases_playlist_icon_play:hover
 {
 margin-right:5px;
 color:#FFF!important;
@@ -1163,7 +1167,7 @@ margin-right:30px;
 }
 
 
-.open_artists_listing_releases h2, 
+.open_artists_listing_releases h2,
 {
 margin-top:-25px!important;
 margin-left:-4px;
@@ -1180,7 +1184,7 @@ list-style: none;
 }
 
 
-.open_releases li a 
+.open_releases li a
 {
 text-decoration:none;
 color:#000;
@@ -1202,19 +1206,19 @@ left: -1em;
 color:#666;
   margin-left:10px;
 
-margin-top:-10px; 
+margin-top:-10px;
 padding-bottom:0px;
 line-height:17px;
 }
 
-.open_releases_press_text a 
+.open_releases_press_text a
 {
 color: #000;
 opacity: 0.9;
   text-decoration: none;
 }
 
-.open_releases_press_text a:hover 
+.open_releases_press_text a:hover
 {
 color: #000;
 opacity: 1;
@@ -1226,7 +1230,7 @@ margin-top:-40px;
 margin-bottom:0px;
 text-align:right;}
 
-.open_releases_button li, .open_artists_button li 
+.open_releases_button li, .open_artists_button li
 {
 
   background-color:transparent;
@@ -1246,7 +1250,7 @@ text-align:right;}
   font-size:40px;
 }
 
-.open_releases_button_left 
+.open_releases_button_left
 {
   background-image:url("../pics/button/release_retour.png");
 
@@ -1283,7 +1287,7 @@ text-align:right;}
 {
   color:transparent!important;
 }
-.open_releases_buy 
+.open_releases_buy
 {
   background-color:#1a1a1a;
   color:#FFF;
@@ -1300,25 +1304,25 @@ text-align:right;}
 {
   background-color: #29ABE2;
 }
-.open_releases_buy img 
+.open_releases_buy img
 {
   padding:0px 2px 0px 2px;
 }
 
-.open_releases_price 
+.open_releases_price
 {
   float:left;
   margin-top:1px;
 }
-.open_releases_market 
+.open_releases_market
 {
   float:right;
 }
 
-.open_releases_buy a 
+.open_releases_buy a
 {
   color:#FFF;
-  text-decoration:none; 
+  text-decoration:none;
 }
 
 
@@ -1327,26 +1331,26 @@ ul.open_releases_download
   margin:-10px 0px 10px 2px;
 }
 
-.open_releases_download li 
+.open_releases_download li
 {
   display:inline;
   padding:5px;
   font-size:10px;
   font-size:1em;
-  font-family: arial, verdana, sans-serif; 
+  font-family: arial, verdana, sans-serif;
   margin:2px; }
 
-  .open_releases_download a 
+  .open_releases_download a
   {
     background-color:#e6e6e6;
     padding:7px;
 
 
   }
-  .open_releases_download a:hover 
+  .open_releases_download a:hover
   {
     background-color:#000;
-    color:#FFF; 
+    color:#FFF;
   }
 
 
@@ -1356,7 +1360,7 @@ ul.open_releases_download
   {
     margin-bottom:-20px;
   }
-  .open_releases_share_button li 
+  .open_releases_share_button li
   {
     display: inline;
     margin:2px 2px 2px 2px;
@@ -1369,13 +1373,13 @@ ul.open_releases_download
 
   }
 
-  .open_releases_share_button img 
+  .open_releases_share_button img
   {
     margin-top:-6px;
     opacity:0.6;
   }
 
-  .open_releases_share_button img:hover 
+  .open_releases_share_button img:hover
   {
     opacity:1;
   }
@@ -1432,13 +1436,13 @@ margin-right:30px;
 width:220px;
 background-color:#FFF;
 padding-bottom:0px;
-margin:10px 10px 10px 10px;  
+margin:10px 10px 10px 10px;
 float:left!important;
 }
 
-.open_artists_listing_releases img 
+.open_artists_listing_releases img
 {margin-top:-20px;}
-.open_artists_listing_releases h2 
+.open_artists_listing_releases h2
 {
 margin-top:-25px;
 }
@@ -1447,12 +1451,12 @@ margin-top:-25px;
 margin:-10px 0px 10px 0px;
 padding-bottom:5px;
 }
-.open_artists_linked li 
+.open_artists_linked li
 {
 margin:10px;
 
 }
-.open_artists_linked ul a 
+.open_artists_linked ul a
 {
 background-color:#e6e6e6;
 padding:5px;
@@ -1467,7 +1471,7 @@ color:#FFF;
   /* A TRIER */
 
 
- .category_infos  
+ .category_infos
   {
    background-color:transparent;
    margin-top:-70px!important;
