--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -182,6 +182,8 @@ height:254px;
 width:220px;
 -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+background-image:url("../pics/artists/hexagone-trame.png");
+
 }
 
 .artists_show_artwork_first , .artists_show_artwork
@@ -204,6 +206,7 @@ height:254px;
 width:158px;
 top:20px;
 margin-left: 31px;
+z-index:4000;
 }
 
 
@@ -967,8 +970,6 @@ font-family: 'Jockey One', sans-serif;
 .footer_content h1
 {
 color:#FFF;
-background-image:url(../pics/pattern/pat-bg.png);
-background-repeat:repeat;
 display:inline;
 padding:2px 4px 2px 4px;
 margin-left:-2px;
