Test Grid GFX & ARTISTS

--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1654,14 +1654,18 @@ padding-bottom:0px;
 margin:10px 10px 10px 10px;
 float:left!important;
 }
+.open_artists_listing_releases_container{width: 600px; height: 500px;}
+
 .open_artists_listing_releases
 {
 width:220px;
 background-color:#FFF;
 padding-bottom:0px;
 margin:10px 10px 10px 10px;
-float:left!important;
+float:left;
+position: relative;
 }
+
 
 .open_artists_listing_releases img,
 {margin-top:-20px;}
