--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1235,11 +1235,13 @@ color:#666;
 font-size:13px;
 font-size:1.3rem;
 margin-top:-40px;
-text-align: right;}
+text-align: right;
+font-weight: lighter;}
+h2.open_releases_artwork_credit a:hover {color:#666;}
 h2.open_releases_artwork_credit a:hover {color:#000;}
+
 .open_releases_artwork_credit a,  .open_artists_bio a {color:#000;font-weight:bold;text-decoration: none;}
 .open_artits_bio a:hover {color:#000;}
-h2.open_releases_artwork_credit a:hover {color:#666;}
 h1.open_releases_title, h2.open_releases_title, h3.open_releases_title, h2.open_artists_title
 {
 font-size:16px;
