--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -19,7 +19,7 @@ margin-right: auto;
 body
 {
 padding:0px;
-font-family: "Arial", Helvetica, sans-serif;
+font-family: 'Open Sans', sans-serif;
 }
 
 html
